--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -13,19 +13,20 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="32dp"
         android:background="@color/purple_200"
-        tools:context=".ui.auth.JoinFragment"        >
+        android:padding="32dp"
+        tools:context=".ui.auth.JoinFragment">
+
         <ImageView
             android:id="@+id/addProfileImageView"
-            android:src="@drawable/ic_baseline_image_search_24"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:onClick="@{()-> viewModel.requestPicker()}"
-            />
+            android:src="@drawable/ic_baseline_image_search_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/inputEmailIcon"
             android:layout_width="48dp"
@@ -34,42 +35,42 @@
             android:layout_marginRight="16dp"
             android:scaleType="center"
             android:src="@drawable/ic_baseline_mark_email_read"
-            app:layout_constraintTop_toTopOf="@id/inputEmail"
             app:layout_constraintBottom_toBottomOf="@id/inputEmail"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/inputEmail"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/inputEmail" />
+
         <EditText
             android:id="@+id/inputEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/addProfileImageView"
-            app:layout_constraintStart_toEndOf="@id/inputEmailIcon"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toEndOf="@id/inputEmailIcon"
+            app:layout_constraintTop_toBottomOf="@id/addProfileImageView" />
+
         <ImageView
             android:id="@+id/inputLoginIdIcon"
             android:layout_width="48dp"
             android:layout_height="0dp"
-          android:layout_marginTop="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:scaleType="center"
             android:src="@drawable/ic_baseline_account_box"
-            app:layout_constraintTop_toTopOf="@id/inputLoginId"
             app:layout_constraintBottom_toBottomOf="@id/inputLoginId"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/inputLoginId"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/inputLoginId" />
+
         <EditText
             android:id="@+id/inputLoginId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/inputEmail"
-            app:layout_constraintStart_toEndOf="@id/inputLoginIdIcon"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toEndOf="@id/inputLoginIdIcon"
+            app:layout_constraintTop_toBottomOf="@id/inputEmail" />
+
         <ImageView
             android:id="@+id/inputLoginPwIcon"
             android:layout_width="48dp"
@@ -78,31 +79,30 @@
             android:layout_marginRight="16dp"
             android:scaleType="center"
             android:src="@drawable/ic_baseline_lock_24"
-            app:layout_constraintTop_toTopOf="@id/inputLoginPw"
             app:layout_constraintBottom_toBottomOf="@id/inputLoginPw"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/inputLoginPw"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/inputLoginPw" />
+
         <EditText
             android:id="@+id/inputLoginPw"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/inputLoginId"
-            app:layout_constraintStart_toEndOf="@id/inputLoginPwIcon"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toEndOf="@id/inputLoginPwIcon"
+            app:layout_constraintTop_toBottomOf="@id/inputLoginId" />
+
         <Button
             android:id="@+id/buttonJoin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/request_join"
-            app:layout_constraintTop_toBottomOf="@id/inputLoginPw"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-
             android:onClick="@{()-> viewModel.requestJoin()}"
-            />
+            android:text="@string/request_join"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toBottomOf="@id/inputLoginPw" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
